# predictor-game-app

./: .gitignore  leaderboard.txt  main.py  match_booster.json  match_details.json  pyproject.toml  requirements.txt  transactional.txt
app/: .env  date_manpulation.py  main.py  match_details.json  match_details_back.json  metadata.json
app/modules/: core_data_helper.py  navigator.py  run_aggregate_cycle.py  ui.py  util_app.py
app/pages/: admin.py  help.py  leaderboard.py  stats.py
