[project]
name = "predictorapplication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "authlib>=1.3.2",
    "boto3>=1.37.18",
    "jsonpath-ng==1.7.0",
    "pandas==2.2.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "ruff>=0.15.7",
    "streamlit>=1.42.0",
]
