[project]
name = "predictorapplication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib",
    "boto3",
    "jsonpath-ng",
    "pandas",
    "pydantic",
    "pydantic-settings",
    "ruff",
    "s3fs>=0.4.2",
    "scrapy>=2.14.2",
    "streamlit",
]
